--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "flyingunicorn222 (github.com/flyingunicorn222)",
   "name": "1broker-client",
   "description": "Client for 1broker api",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/flyingunicorn222/1broker-api.git"
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "glob": "^7.1.1",
-    "lodash": "*",
+    "lodash": "^4.16.4",
     "request": "^2.75.0"
   },
   "devDependencies": {
