--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "flyingunicorn222 (github.com/flyingunicorn222)",
   "name": "1broker-client",
   "description": "node.js wrapper for 1broker.com api, providing extra features",
-  "version": "2.1.3",
+  "version": "2.2.3",
   "repository": {
     "type": "git",
     "url": "https://github.com/flyingunicorn222/1broker-client.git"
@@ -15,6 +15,7 @@
     "node": ">= 0.8.0"
   },
   "dependencies": {
+    "big.js": "^3.1.3",
     "lodash": "^4.16.4",
     "request": "^2.75.0"
   },
