--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "flyingunicorn222 (github.com/flyingunicorn222)",
   "name": "1broker-client",
   "description": "node.js wrapper for 1broker.com api, providing extra features",
-  "version": "2.5.2",
+  "version": "2.6.1",
   "repository": {
     "type": "git",
     "url": "https://github.com/flyingunicorn222/1broker-client.git"
@@ -22,7 +22,8 @@
   "devDependencies": {
     "coffee-script": "^1.10.0",
     "docco": "^0.7.0",
-    "nodemon": "*"
+    "nodemon": "*",
+    "sinon": "^1.17.7"
   },
   "keywords": [
     "api",
