--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "flyingunicorn222 (github.com/flyingunicorn222)",
   "name": "1broker-client",
   "description": "node.js wrapper for 1broker.com api, providing extra features",
-  "version": "2.6.1",
+  "version": "2.6.3",
   "repository": {
     "type": "git",
     "url": "https://github.com/flyingunicorn222/1broker-client.git"
@@ -22,7 +22,10 @@
   "devDependencies": {
     "coffee-script": "^1.10.0",
     "docco": "^0.7.0",
+    "mocha": "^3.2.0",
+    "should": "^11.1.2",
     "nodemon": "*",
+    "dotenv": "^2.0.0",
     "sinon": "^1.17.7"
   },
   "keywords": [
