--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "big.js": "^3.1.3",
+    "bluebird": "^3.5.0",
     "lodash": "^4.16.4",
     "request": "^2.75.0"
   },
