--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "flyingunicorn222 (github.com/flyingunicorn222)",
   "name": "1broker-client",
   "description": "node.js wrapper for 1broker.com api, providing extra features",
-  "version": "2.9.2",
+  "version": "2.10.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/flyingunicorn222/1broker-client.git"
@@ -15,12 +15,12 @@
     "request": "^2.75.0"
   },
   "devDependencies": {
-    "coffee-script": "^1.10.0",
+    "coffeescript": "^2.2.3",
     "docco": "^0.7.0",
-    "mocha": "^3.2.0",
-    "should": "^11.1.2",
-    "nodemon": "*",
     "dotenv": "^2.0.0",
+    "mocha": "^3.2.0",
+    "nodemon": "*",
+    "should": "^11.1.2",
     "sinon": "^1.17.7"
   },
   "keywords": [
